--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,14 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__tree": "cpp",
+        "deque": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "map": "cpp",
+        "stack": "cpp",
+        "filesystem": "cpp",
+        "__memory": "cpp"
     }
 }
